Update aduh ini gmn.html

--- a/aduh ini gmn.html
+++ b/aduh ini gmn.html
@@ -105,15 +105,15 @@
         dengan Beasiswa Penuh <span class="sparkle">🌍</span>
       </div>
       <div class="wish-item">
-        <input type="checkbox" onclick="toggle(this)" /> Menjadi Ahli Elektro
-        <span class="sparkle">⚡</span>
+        <input type="checkbox" onclick="toggle(this)" /> Menjadi Data Scientist
+        <span class="sparkle">💻</span>
       </div>
       <div class="wish-item">
-        <input type="checkbox" onclick="toggle(this)" /> Membuat Inovasi untuk
+        <input type="checkbox" onclick="toggle(this)" /> Membuat Inovasi untuk Pendidikan
         Indonesia <span class="sparkle">💡</span>
       </div>
       <div class="wish-item">
-        <input type="checkbox" onclick="toggle(this)" /> Membantu Orang Tua
+        <input type="checkbox" onclick="toggle(this)" /> Membantu Keluarga
         <span class="sparkle">❤️</span>
       </div>
       <div class="wish-item">
@@ -136,3 +136,4 @@
     </script>
   </body>
 </html>
+
