--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <h1>Nesya di 10 Tahun ke Depan ✨</h1>
 
     <div class="wish-item"><input type="checkbox" onclick="toggle(this)"> Lulus S2 di Luar Negeri dengan Beasiswa Penuh <span class="sparkle">🌍</span></div>
-    <div class="wish-item"><input type="checkbox" onclick="toggle(this)"> Menjadi Ahli Elektro <span class="sparkle">⚡</span></div>
-    <div class="wish-item"><input type="checkbox" onclick="toggle(this)"> Membuat Inovasi untuk Indonesia <span class="sparkle">💡</span></div>
+    <div class="wish-item"><input type="checkbox" onclick="toggle(this)"> Menjadi Data Scientist <span class="sparkle">⚡</span></div>
+    <div class="wish-item"><input type="checkbox" onclick="toggle(this)"> Membuat Inovasi untuk PendidikanIndonesia <span class="sparkle">💻</span></div>
     <div class="wish-item"><input type="checkbox" onclick="toggle(this)"> Membantu Orang Tua <span class="sparkle">❤️</span></div>
     <div class="wish-item"><input type="checkbox" onclick="toggle(this)"> Menjadi Cahaya untuk Sesama <span class="sparkle">🌟</span></div>
 
@@ -109,3 +109,4 @@
   </script>
 </body>
 </html>
+
