Fix HTML formatting and structure

--- a/aduh ini gmn.html
+++ b/aduh ini gmn.html
@@ -109,8 +109,8 @@
         <span class="sparkle">💻</span>
       </div>
       <div class="wish-item">
-        <input type="checkbox" onclick="toggle(this)" /> Membuat Inovasi untuk Pendidikan
-        Indonesia <span class="sparkle">💡</span>
+        <input type="checkbox" onclick="toggle(this)" /> Membuat Inovasi untuk Pendidikan Indonesia 
+        <span class="sparkle">💡</span>
       </div>
       <div class="wish-item">
         <input type="checkbox" onclick="toggle(this)" /> Membantu Keluarga
@@ -136,4 +136,5 @@
     </script>
   </body>
 </html>
+
 
